# Text-Editor

./: CMakeLists.txt
src/: MainFrame.cpp  MainFrame.h  app.cpp  app.h
